--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask==1.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
-Werkzeug==1.0.1
-email-validator==1.1.2
-Flask-WTF==0.14.2
-Flask-Mail==0.9.1
+Werkzeug==0.16.0
+email-validator
+flask_wtf
+flask_mail
